--- a/catalog_admin.html
+++ b/catalog_admin.html
@@ -122,11 +122,12 @@
 
     /* Firebase init (Firestore only) */
     const firebaseConfig = {
-      apiKey: "AIzaSyAMnZy_gRIu43w6RyvcgRFHcV6xQjBAriM",
-      authDomain: "food-tracker-fd312.firebaseapp.com",
-      projectId: "food-tracker-fd312"
+      apiKey: "AlzaSyBUI3_b1LPQ98uYnvkxJBAU-gE3Jj22X0I",
+      authDomain: "pro-bakery-tracker.firebaseapp.com",
+      projectId: "pro-bakery-tracker"
     };
     firebase.initializeApp(firebaseConfig);
+    
     const fs   = firebase.firestore();
     const auth = firebase.auth();
 
