--- a/index.html
+++ b/index.html
@@ -201,15 +201,15 @@
     const $ = (id)=>document.getElementById(id);
 
     /* Firebase */
-    const firebaseConfig = {
-      apiKey: "AlzaSyBUI3_b1LPQ98uYnvkxJBAU-gE3Jj22X0I",
-      authDomain: "pro-bakery-tracker.firebaseapp.com",
-      databaseURL: "https://pro-bakery-tracker-default-rtdb.firebaseio.com",
-      projectId: "pro-bakery-tracker",
-      storageBucket: "pro-bakery-tracker.firebasestorage.app",
-      messagingSenderId: "<YOUR_SENDER_ID>",
-      appId: "1:<YOUR_SENDER_ID>:web:<YOUR_WEB_APP_ID>"
-    };
+      const firebaseConfig = {
+    apiKey: "AIzaSyBUl3_b1LPQ98uYnvkxJBAU-gE3Jj22X0I",
+    authDomain: "pro-bakery-tracker.firebaseapp.com",
+    databaseURL: "https://pro-bakery-tracker-default-rtdb.firebaseio.com",
+    projectId: "pro-bakery-tracker",
+    storageBucket: "pro-bakery-tracker.firebasestorage.app",
+    messagingSenderId: "676035266941",
+    appId: "1:676035266941:web:503224475b25d65e7b6414"
+  };
     firebase.initializeApp(firebaseConfig);
     
     const db   = firebase.database();   // RTDB for logs
