--- a/catalog_admin.html
+++ b/catalog_admin.html
@@ -122,10 +122,15 @@
 
     /* Firebase init (Firestore only) */
     const firebaseConfig = {
-      apiKey: "AlzaSyBUI3_b1LPQ98uYnvkxJBAU-gE3Jj22X0I",
+      apiKey: "AIzaSyBUl3_b1LPQ98uYnvkxJBAU-gE3Jj22X0I",
       authDomain: "pro-bakery-tracker.firebaseapp.com",
-      projectId: "pro-bakery-tracker"
+      databaseURL: "https://pro-bakery-tracker-default-rtdb.firebaseio.com",
+      projectId: "pro-bakery-tracker",
+      storageBucket: "pro-bakery-tracker.firebasestorage.app",
+      messagingSenderId: "676035266941",
+      appId: "1:676035266941:web:503224475b25d65e7b6414"
     };
+
     firebase.initializeApp(firebaseConfig);
     
     const fs   = firebase.firestore();
