--- a/index.html
+++ b/index.html
@@ -42,14 +42,13 @@
           /* Row: Product | Amount | Unit | [Delete] */
     .item .row-line{
       display:grid;
-      grid-template-columns: 1fr 1fr minmax(140px, 0.6fr) auto; /* third col is Unit */
+      grid-template-columns: 1fr 1fr minmax(140px, 0.6fr) auto; /* Product | Amount | Unit | [Delete] */
       gap:10px;
-      align-items:start; /* keep all controls aligned along the top */
+      align-items:start; /* aligns the tops of all controls */
     }
-    
     .item .row-actions{
       justify-self:end;
-      align-self:end;     /* sits at the bottom right of the row */
+      align-self:end;   /* bottom-right of the row */
       display:flex;
       gap:8px;
     }
