--- a/catalog_admin.html
+++ b/catalog_admin.html
@@ -28,7 +28,6 @@
     th,td{padding:10px;border-bottom:1px solid var(--line);text-align:left;vertical-align:middle}
     th{color:var(--gold);font-weight:700}
     .muted{color:var(--muted)}
-    .pill{display:inline-block;padding:2px 8px;border:1px solid var(--line);border-radius:999px;font-size:.8rem}
     .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:10px}
   </style>
 </head>
@@ -110,7 +109,7 @@
     </div>
   </div>
 
-  <!-- Libs -->
+  <!-- Libs (primary) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
@@ -118,14 +117,44 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
   <script>
+    /* ---------- Helpers & XLSX fallback ---------- */
+    function $(id){ return document.getElementById(id); }
+
+    // If the primary XLSX CDN fails to load, try a fallback; also provide a robust saver
+    (function ensureXLSX(){
+      function fallback(){
+        var s=document.createElement('script');
+        s.src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js";
+        document.head.appendChild(s);
+      }
+      setTimeout(()=>{ if(typeof XLSX==="undefined") fallback(); }, 800);
+    })();
+
+    function saveWorkbook(wb, filename){
+      try{
+        if (typeof XLSX !== "undefined" && XLSX.writeFile) {
+          XLSX.writeFile(wb, filename);
+          return;
+        }
+      }catch(e){}
+      try{
+        const data = XLSX.write(wb, { bookType:"xlsx", type:"array" });
+        const blob = new Blob([data], { type: "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" });
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement("a"); a.href=url; a.download=filename; a.click();
+        URL.revokeObjectURL(url);
+      }catch(e){
+        console.error("XLSX save failed:", e);
+        alert("Could not generate the Excel file. Refresh and ensure the XLSX script isn’t blocked.");
+      }
+    }
+
+    /* ---------- Firebase ---------- */
     const ADMIN_UIDS = new Set([
       "In9nS195FPamjwoTM8aHDjJRq8r2",
       "csKdZoNF3ufwPVNS1tUmeRFzCnF2"
     ]);
 
-    function $(id){ return document.getElementById(id); }
-
-    /* Firebase init (Firestore only) */
     const firebaseConfig = {
       apiKey: "AIzaSyBUl3_b1LPQ98uYnvkxJBAU-gE3Jj22X0I",
       authDomain: "pro-bakery-tracker.firebaseapp.com",
@@ -140,7 +169,6 @@
     const fs   = firebase.firestore();
     const auth = firebase.auth();
 
-    /* Firestore ping */
     async function ping(){
       try{
         await fs.collection("catalog").limit(1).get();
@@ -156,12 +184,12 @@
     }
     ping();
 
-    /* Auth */
     function applyAuthUI(u){
       $("login-btn").textContent = u ? "Logout" : "Login";
-      render();
+      renderWithRows(_lastGoodRows);
     }
     auth.onAuthStateChanged(applyAuthUI);
+
     $("login-btn").onclick = async ()=>{
       if (auth.currentUser){ await auth.signOut(); return; }
       const email = prompt("Admin email:"); if(!email) return;
@@ -170,26 +198,45 @@
       catch(e){ console.error(e); alert("Login failed."); }
     };
 
-    /* State */
+    /* ---------- State ---------- */
     const ALLOWED_UNITS = ["each","piece","kg","g","lb","L","ml","fl oz"];
     const CATALOG = new Map();
     let editId = null;
+    let _lastGoodRows = [];
 
-    /* Subscribe + render */
-    fs.collection("catalog").onSnapshot(s=>{
-      CATALOG.clear();
-      s.forEach(d=> CATALOG.set(d.id, d.data()));
-      render();
-    });
+    /* ---------- Live subscribe with fail-loud error handling ---------- */
+    fs.collection("catalog").onSnapshot(
+      (s)=>{
+        const rows=[];
+        s.forEach(d=> rows.push({id:d.id, ...d.data()}));
+        _lastGoodRows = rows;
+        renderWithRows(rows);
+      },
+      (err)=>{
+        console.error("catalog onSnapshot error:", err);
+        $("fb-status").innerHTML = 'Firebase: <strong class="err">read error</strong> ' +
+          '<span class="status">'+ (err.code||err.message||"") +'</span>';
+        // show last known good data if available
+        renderWithRows(_lastGoodRows);
+        if (err.code === "permission-denied") {
+          alert("Login required to view catalog. Click Login (top-right).");
+        }
+      }
+    );
 
-    function render(){
+    /* ---------- Render ---------- */
+    function renderWithRows(rows){
       const q = $("search").value.trim().toLowerCase();
       const tbody = $("tbody"); tbody.innerHTML = "";
-      const rows = [];
-      CATALOG.forEach((v,id)=> rows.push({id,...v}));
-      rows.sort((a,b)=> (a.name||"").localeCompare(b.name||""));
+      const sorted = [...rows].sort((a,b)=> (a.name||"").localeCompare(b.name||""));
+      let filtered = sorted.filter(r=> !q || (r.name||"").toLowerCase().includes(q));
 
-      const filtered = rows.filter(r=> !q || (r.name||"").toLowerCase().includes(q));
+      // If the search is hiding everything, auto-clear once for convenience
+      if (!filtered.length && q) {
+        $("search").value = "";
+        filtered = sorted;
+      }
+
       if(!filtered.length){
         const tr=document.createElement("tr");
         tr.innerHTML=`<td colspan="6" class="muted">No products found.</td>`;
@@ -212,9 +259,11 @@
         tbody.appendChild(tr);
       });
 
+      // wire actions
       tbody.querySelectorAll("[data-edit]").forEach(btn=>{
         btn.onclick = ()=>{
-          const id=btn.getAttribute("data-edit"); const cur=CATALOG.get(id); if(!cur) return;
+          const id=btn.getAttribute("data-edit");
+          const cur=rows.find(r=>r.id===id); if(!cur) return;
           editId = id;
           $("name").value = cur.name||"";
           $("baseUnit").value = cur.baseUnit||"each";
@@ -229,81 +278,175 @@
           if(!auth.currentUser || !ADMIN_UIDS.has(auth.currentUser.uid)) return alert("Admin login required.");
           if(!confirm("Delete this product?")) return;
           try{ await fs.collection("catalog").doc(btn.getAttribute("data-del")).delete(); }
-          catch(e){ console.error(e); alert("Delete failed."); }
+          catch(e){
+            console.error(e);
+            alert(e.code === "permission-denied" ? "Permission denied by Firestore rules." : "Delete failed.");
+          }
         };
       });
     }
 
-    $("clear-search").onclick = ()=>{ $("search").value=""; render(); };
-    $("clear").onclick = ()=>{ editId=null; $("name").value=""; $("baseUnit").value="each"; $("price").value=""; $("useconv").value="false"; $("active").value="true"; };
+    // search & clear
+    $("clear-search").onclick = ()=>{ $("search").value=""; renderWithRows(_lastGoodRows); };
+
+    /* ---------- Form actions ---------- */
+    $("clear").onclick = ()=>{
+      editId = null;
+      $("name").value=""; $("baseUnit").value="each"; $("price").value="";
+      $("useconv").value="false"; $("active").value="true";
+    };
 
     const slugify = (s)=> s.toLowerCase().replace(/[^a-z0-9]+/g,"_").replace(/^_|_$/g,"");
     const parseBool = (v)=>{ if(typeof v==="boolean") return v; const t=String(v??"").trim().toLowerCase(); return ["true","1","yes","y"].includes(t); };
 
     $("save").onclick = async ()=>{
-      try{ await auth.currentUser?.reload(); }catch(e){}
-      const u=auth.currentUser;
-      if(!u || !ADMIN_UIDS.has(u.uid)){ alert("Admin login required."); return; }
+      try { await auth.currentUser?.reload(); } catch(e) {}
+      const u = auth.currentUser;
+      if (!u || !ADMIN_UIDS.has(u.uid)) { alert("Admin login required."); return; }
 
-      const name=$("name").value.trim();
-      const baseUnit=$("baseUnit").value;
-      const pricePerBase=parseFloat($("price").value);
-      const useConversions=$("useconv").value==="true";
-      const active=$("active").value==="true";
+      const name           = $("name").value.trim();
+      const baseUnit       = $("baseUnit").value;
+      const pricePerBase   = parseFloat($("price").value);
+      const useConversions = $("useconv").value === "true";
+      const active         = $("active").value === "true";
 
-      if(!name || !ALLOWED_UNITS.includes(baseUnit) || isNaN(pricePerBase) || pricePerBase<0){
-        alert("Fill name, base unit, and a non-negative price."); return;
+      if (!name || !ALLOWED_UNITS.includes(baseUnit) || Number.isNaN(pricePerBase) || pricePerBase < 0) {
+        alert("Fill name, base unit, and a non-negative price.");
+        return;
       }
-      const payload={name,baseUnit,pricePerBase,useConversions,active};
 
-      try{
-        if(editId){ await fs.collection("catalog").doc(editId).set(payload,{merge:false}); }
-        else{ const id=slugify(name); await fs.collection("catalog").doc(id).set(payload,{merge:false}); }
+      const payload = { name, baseUnit, pricePerBase, useConversions, active };
+
+      try {
+        if (editId) {
+          await fs.collection("catalog").doc(editId).set(payload, { merge: false });
+        } else {
+          const id = slugify(name);
+          await fs.collection("catalog").doc(id).set(payload, { merge: false });
+        }
         $("clear").click();
-      }catch(e){ console.error(e); alert("Save failed."); }
+      } catch (e) {
+        console.error(e);
+        alert(e.code === "permission-denied" ? "Permission denied by Firestore rules." : "Save failed.");
+      }
     };
 
-    /* CSV Export */
+    /* ---------- CSV Export ---------- */
     $("export").onclick = ()=>{
       const rows=[["id","name","baseUnit","pricePerBase","useConversions","active"]];
-      CATALOG.forEach((v,id)=> rows.push([id,v.name||"",v.baseUnit||"",Number(v.pricePerBase||0),!!v.useConversions,!!v.active]));
-      const csv=Papa.unparse(rows);
+      _lastGoodRows.forEach(r=> rows.push([r.id, r.name||"", r.baseUnit||"", Number(r.pricePerBase||0), !!r.useConversions, !!r.active]));
+      const csv = Papa.unparse(rows);
       const blob=new Blob([csv],{type:"text/csv;charset=utf-8;"}); const url=URL.createObjectURL(blob);
       const a=document.createElement("a"); a.href=url; a.download="catalog_export.csv"; a.click(); URL.revokeObjectURL(url);
     };
 
-    /* Excel Export with dropdowns + data */
-    function buildCatalogWorkbook(includeData=true){
-      const wb=XLSX.utils.book_new();
-      const wsUnits=XLSX.utils.aoa_to_sheet([["Units"],...ALLOWED_UNITS.map(u=>[u])]);
-      XLSX.utils.book_append_sheet(wb,wsUnits,"Units");
-      const wsBool=XLSX.utils.aoa_to_sheet([["Booleans"],["true"],["false"]]);
-      XLSX.utils.book_append_sheet(wb,wsBool,"Booleans");
+    /* ---------- Excel workbook builders ---------- */
+    function buildCatalogWorkbook(includeData = true) {
+      const wb = XLSX.utils.book_new();
+
+      // Units sheet for baseUnit dropdown
+      const wsUnits = XLSX.utils.aoa_to_sheet([["Units"], ...ALLOWED_UNITS.map(u=>[u])]);
+      XLSX.utils.book_append_sheet(wb, wsUnits, "Units");
+
+      // Booleans (true/false) sheet
+      const wsBool = XLSX.utils.aoa_to_sheet([["Booleans"],["true"],["false"]]);
+      XLSX.utils.book_append_sheet(wb, wsBool, "Booleans");
+
+      // Catalog sheet
       const headers=["id (optional)","name","baseUnit","pricePerBase","useConversions","active"];
       const rows=[headers];
-      if(includeData){ const dataRows=[]; CATALOG.forEach((v,id)=> dataRows.push([id,v.name||"",v.baseUnit||"",Number(v.pricePerBase||0),!!v.useConversions,!!v.active])); dataRows.sort((a,b)=> String(a[1]).localeCompare(String(b[1]))); rows.push(...dataRows);}
-      const ws=XLSX.utils.aoa_to_sheet(rows);
-      ws["!ref"]="A1:F1001";
-      ws["!dataValidation"]=[
-        {sqref:"C2:C1001",type:"list",allowBlank:true,formula1:"=Units!$A$2:$A$"+(ALLOWED_UNITS.length+1)},
-        {sqref:"E2:E1001",type:"list",allowBlank:true,formula1:"=Booleans!$A$2:$A$3"},
-        {sqref:"F2:F1001",type:"list",allowBlank:true,formula1:"=Booleans!$A$2:$A$3"}
+      if (includeData) {
+        const dataRows = _lastGoodRows
+          .map(r=> [r.id, r.name||"", r.baseUnit||"", Number(r.pricePerBase||0), !!r.useConversions, !!r.active])
+          .sort((a,b)=> String(a[1]).localeCompare(String(b[1])));
+        rows.push(...dataRows);
+      }
+      const ws = XLSX.utils.aoa_to_sheet(rows);
+
+      // validation over a generous range
+      ws["!ref"] = "A1:F1001";
+      ws["!dataValidation"] = [
+        { sqref:"C2:C1001", type:"list", allowBlank:true, showErrorMessage:true, errorTitle:"Invalid Unit", error:"Choose a unit from the dropdown.", formula1:"=Units!$A$2:$A$"+(ALLOWED_UNITS.length+1) },
+        { sqref:"E2:E1001", type:"list", allowBlank:true, formula1:"=Booleans!$A$2:$A$3" },
+        { sqref:"F2:F1001", type:"list", allowBlank:true, formula1:"=Booleans!$A$2:$A$3" }
       ];
-      XLSX.utils.book_append_sheet(wb,ws,"Catalog");
+
+      XLSX.utils.book_append_sheet(wb, ws, "Catalog");
       return wb;
     }
-    $("export-xlsx").onclick=()=>{ const wb=buildCatalogWorkbook(true); XLSX.writeFile(wb,"catalog_export.xlsx"); };
-    $("download-xlsx").onclick=()=>{ const wb=buildCatalogWorkbook(false); XLSX.writeFile(wb,"catalog_blank_template.xlsx"); };
 
-    $("blank-csv").onclick=()=>{
+    $("export-xlsx").onclick = ()=>{ const wb = buildCatalogWorkbook(true);  saveWorkbook(wb, "catalog_export.xlsx"); };
+    $("download-xlsx").onclick = ()=>{ const wb = buildCatalogWorkbook(false); saveWorkbook(wb, "catalog_blank_template.xlsx"); };
+
+    /* ---------- Blank CSV ---------- */
+    $("blank-csv").onclick = ()=>{
       const rows=[["id (optional)","name","baseUnit","pricePerBase","useConversions","active"]];
-      const csv=Papa.unparse(rows); const blob=new Blob([csv],{type:"text/csv;charset=utf-8;"}); const url=URL.createObjectURL(blob);
+      const csv=Papa.unparse(rows);
+      const blob=new Blob([csv],{type:"text/csv;charset=utf-8;"}); const url=URL.createObjectURL(blob);
       const a=document.createElement("a"); a.href=url; a.download="catalog_blank.csv"; a.click(); URL.revokeObjectURL(url);
     };
 
-    /* Import CSV or XLSX */
-    $("import").onclick=()=> $("csv-file").click();
-    $("csv-file").addEventListener
+    /* ---------- Import CSV or XLSX ---------- */
+    $("import").onclick = ()=> $("csv-file").click();
+
+    $("csv-file").addEventListener("change", async ev=>{
+      const file=ev.target.files[0]; if(!file) return;
+      if(!auth.currentUser || !ADMIN_UIDS.has(auth.currentUser.uid)) { alert("Admin login required."); ev.target.value=""; return; }
+
+      const name=file.name.toLowerCase();
+
+      const upsertMany = async (records)=>{
+        let created=0, overwritten=0, skipped=0;
+        for(const r of records){
+          try{
+            const nm=(r.name||"").trim();
+            const base=(r.baseUnit||"each").trim();
+            const price=parseFloat(r.pricePerBase);
+            const idRaw=(r.id||"").trim();
+            const useC = (typeof r.useConversions==="undefined") ? false : r.useConversions;
+            const act  = (typeof r.active==="undefined") ? true  : r.active;
+
+            const useConversions = parseBool(useC);
+            const active = parseBool(act);
+
+            if(!nm || !ALLOWED_UNITS.includes(base) || !isFinite(price) || price<0){ skipped++; continue; }
+            const id = idRaw ? slugify(idRaw) : slugify(nm);
+
+            const ref=fs.collection("catalog").doc(id);
+            const exists=(await ref.get()).exists;
+            await ref.set({name:nm, baseUnit:base, pricePerBase:price, useConversions, active}, {merge:false});
+            exists ? overwritten++ : created++;
+          }catch(e){ console.error(e); skipped++; }
+        }
+        alert(`Import complete.\nCreated: ${created}\nOverwritten: ${overwritten}\nSkipped: ${skipped}`);
+      };
+
+      try{
+        if(name.endsWith(".xlsx")){
+          const data=await file.arrayBuffer();
+          const wb=XLSX.read(data,{type:"array"});
+          const sheetName = wb.Sheets["Catalog"] ? "Catalog" : wb.SheetNames[0];
+          const sheet = wb.Sheets[sheetName];
+          const rows = XLSX.utils.sheet_to_json(sheet, { defval:"" });
+          if(!rows.length) { alert("No rows found."); return; }
+          await upsertMany(rows);
+        }else{
+          Papa.parse(file,{
+            header:true,
+            skipEmptyLines:true,
+            complete: async (res)=>{
+              const rows=res.data||[]; if(!rows.length){ alert("No rows found."); return; }
+              await upsertMany(rows);
+            }
+          });
+        }
+      }finally{
+        ev.target.value="";
+      }
+    });
+  </script>
+</body>
+</html>
 
 
 
